welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:6: error: ';' expected but 'if' found.
  } if (litMessage=="L"){
    ^